<resources>
    <string name="app_name">Fragments Application</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_settings_fragment">Settings Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_favorites_fragment">Favorites Fragment</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="added_item">Added item</string>
    <string name="new_menu_item_added">Menu item added</string>
    <string name="main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="email">email@mail.com</string>
    <string name="favorite">Favorite</string>
    <string name="add">Add note</string>
    <string name="clear">Clear all notes</string>
    <string name="update_note">Edit</string>
    <string name="delete_note">Delete note</string>
    <string name="hello_main_fragment">Main</string>
    <string name="note_name">Name</string>
    <string name="change_date">Change date</string>
    <string name="note_description">Note description</string>
    <string name="add_new_note">Add new note</string>
    <string name="discard">discard</string>
    <string name="save">Save</string>
    <string name="default_note_list">Reset to default note list</string>
    <string name="deleteConfirmationAlertDialogTitle">Confirm deleting note</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="clearAll">Please confirm deletion of all note list</string>
</resources>