<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.NewNoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/new_note_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/note_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="@dimen/name_textSize" />

        <CheckBox
            android:id="@+id/new_note_favorite"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/isFavorite_marginEnd"
            android:gravity="center_vertical"
            android:text="@string/favorite"
            android:textSize="@dimen/card_date_textSize" />

    </LinearLayout>

    <TextView
        android:id="@+id/new_note_date_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:gravity="center_vertical"
        android:textAlignment="gravity"
        tools:text="@tools:sample/date/ddmmyy" />

    <EditText
        android:id="@+id/new_note_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/action_save_new_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/save" />

        <Button
            android:id="@+id/action_discard_new_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/discard" />

    </LinearLayout>


</LinearLayout>